--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -20,12 +20,11 @@
             </ul>
         </nav>
 
-        <!-- Контакты -->
-        <section>
-            <h2>Связаться с нами</h2>
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-            <a href="tel:+380961111111">+38 096 111 11 11</a>
-        </section>
+        <ul>
+            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+            <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+        </ul>
+            
     </header>
     
     <!-- Основная часть сайта -->
@@ -101,28 +100,28 @@
                          alt="Мужчина в очках и бордовой рубашке" 
                          width="270">
                     <h3>Игорь Демьяненко</h3>
-                    <p>Product Designer</p>
+                    <html lang="en"><p>Product Designer</p></html>
                 </li>
                 <li>
                     <img src="./images/woman-2.jpg" 
                          alt="Женщина в очках и пиджаке" 
                          width="270">
                     <h3>Ольга Репина</h3>
-                    <p>Frontend Developer</p>
+                    <html lang="en"><p>Frontend Developer</p></html>
                 </li>
                 <li>
                     <img src="./images/man-3.jpg" 
                          alt="Мужчина в голубой рубашке" 
                          width="270">
                     <h3>Николай Тарасов</h3>
-                    <p>Marketing</p>
+                    <html lang="en"><p>Marketing</p></html>
                 </li>
                 <li>
                     <img src="./images/man-4.jpg" 
                          alt="Мужчина в очках и черной футболке" 
                          width="270">
                     <h3>Михаил Ермаков</h3>
-                    <p>UI Designer</p>
+                    <html lang="en"><p>UI Designer</p></html>
                 </li>
             </ul>
         </section>
@@ -132,9 +131,11 @@
     <footer>
         <a href="">WebStudio</a>
         <address>
-            г. Киев, пр-т Леси Украинки, 26
-            <a href="mailto:info@example.com">info@example.com</a>
-            <a href="tel:+380991111111">+38 099 111 11 11</a>
+            <ul>
+                <li>г. Киев, пр-т Леси Украинки, 26</li>
+                <li><a href="mailto:info@example.com">info@example.com</a></li>
+                <li><a href="tel:+380991111111">+38 099 111 11 11</a></li>
+            </ul>
         </address>
     </footer>
 </body>
