Правильно прописал язык в абзацах для секции "Наша команда"

--- a/index.html
+++ b/index.html
@@ -100,28 +100,28 @@
                          alt="Мужчина в очках и бордовой рубашке" 
                          width="270">
                     <h3>Игорь Демьяненко</h3>
-                    <html lang="en"><p>Product Designer</p></html>
+                    <p lang="en">Product Designer</p>
                 </li>
                 <li>
                     <img src="./images/woman-2.jpg" 
                          alt="Женщина в очках и пиджаке" 
                          width="270">
                     <h3>Ольга Репина</h3>
-                    <html lang="en"><p>Frontend Developer</p></html>
+                    <p lang="en">Frontend Developer</p>
                 </li>
                 <li>
                     <img src="./images/man-3.jpg" 
                          alt="Мужчина в голубой рубашке" 
                          width="270">
                     <h3>Николай Тарасов</h3>
-                    <html lang="en"><p>Marketing</p></html>
+                    <p lang="en">Marketing</p>
                 </li>
                 <li>
                     <img src="./images/man-4.jpg" 
                          alt="Мужчина в очках и черной футболке" 
                          width="270">
                     <h3>Михаил Ермаков</h3>
-                    <html lang="en"><p>UI Designer</p></html>
+                    <p lang="en">UI Designer</p>
                 </li>
             </ul>
         </section>
